fanilizing first phase

--- a/wp-content/themes/henderson/views/base.twig
+++ b/wp-content/themes/henderson/views/base.twig
@@ -12,14 +12,14 @@
 {% block header %}
 	<header class="header padding-lr">
 		<div class="wrapper container">
-			<div class="logos">	
-				<div class="henderson-logo">		
+			<div class="logos">
+				<div class="henderson-logo">
 					<a class="site-logo main-logo" href="{{site.url}}" rel="home">
 						{{source (directory ~ '/static/images/logo/hp-logo.svg') }}
 					</a>
-					<a class="site-logo menu-logo" href="{{site.url}}" rel="home">
-						{{source (directory ~ '/static/images/hp-logo-white.svg') }}
-					</a>
+					{# <a class="site-logo menu-logo" href="{{site.url}}" rel="home">
+																{{source (directory ~ '/static/images/hp-logo-white.svg') }}
+															</a> #}
 				</div>
 				<a class="selkirk-site-logo" href="https://selkirkphysio.ca/" target="_blank" rel="noopener noreferrer" aria-label="Selkirk Website">
 					{{source (directory ~ '/static/images/logo/selkirk-logo.svg') }}
@@ -42,42 +42,20 @@
 <section id="content" role="main" class="content-wrapper">
 	<div class="wrapper{{sidebar_class}}"> {% block content %}{% endblock %}
 		</div>
-
-		{# {% if sidebar %}
-						                <aside class="layout-sidebar">{{sidebar}}
-						                </aside>
-						            {% endif %} #}
-
 	</section>
 
 
 	<div class="overlay padding-lr" id="overlay">
 		<div class="wrapper container">
-			<a class="site-logo" href="{{site.url}}" rel="home" aria-label="{{site.name}}">
-				{# {{source (directory ~ '/images/logo/procast-logo.svg') }} #}
+			<a class="site-logo menu-logo" href="{{site.url}}" rel="home">
+				{{source (directory ~ '/static/images/hp-logo-white.svg') }}
 			</a>
 			<div class="overlay-nav-main">
 				<nav id="site-navigation3" class="overlay-menu" role="navigation">
 					{% include "menu.twig" with{'items':menu.get_items} %}
 				</nav>
-				{# <div class="contact-info">
-					<a href="{{options.get_directions}}">
-						{{source (directory ~ '/static/images/location-icon.svg') }}
-						{{options.address.street_address}},<br/>
-						{{options.address.city}},
-						{{options.address.province}}
-						{{options.address.postal_code}}
-					</a>
-					<a href="tel:{{ options.phone_number }}">
-						{{source (directory ~ '/static/images/phone-icon.svg') }}
-						{% set phoneNumber = options.phone_number %}{% include 'partials/phone-number.twig' %}
-					</a>
-					<p>
-						{{source (directory ~ '/static/images/email-icon.svg') }}
-						{% set myEmail = options.email %}
-						{% include 'partials/email.twig' %}
-					</p>
-				</div> #}
+				<div class="break-line"></div>
+				{% include 'partials/social-media.twig' %}
 			</div>
 		</div>
 	</div>
