--- a/wp-content/themes/henderson/static/less/variables.less
+++ b/wp-content/themes/henderson/static/less/variables.less
@@ -22,6 +22,7 @@ VARIABLES
 @max768: ~"screen and (max-width: 767px)";
 @max992: ~"screen and (max-width: 991px)";
 @max1024: ~"screen and (max-width: 1023px)";
+@max1200: ~"screen and (max-width: 1199px)";
 
 @images: "/wp-content/themes/henderson/static/images"; //change theme name accordingly.
 //use this for background-image
@@ -30,7 +31,8 @@ VARIABLES
 
 .grad-bg {
     /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#12365b+0,12365b+100&0+0,1+100 */
-    background: linear-gradient(to bottom,  rgba(18,54,91,0) 0%,rgba(18,54,91,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    background: linear-gradient(to bottom, rgba(18, 54, 91, 0) 0%, rgba(18, 54, 91, 1) 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 }
 
 :root {
@@ -51,6 +53,7 @@ VARIABLES
     --space-24: calc(1.5 * var(--space-unit)); //24px
     --space-40: calc(2.5 * var(--space-unit)); //40px
     --space-48: calc(3 * var(--space-unit)); //48px
+    --space-56: calc(3.5 * var(--space-unit)); //56px
     --space-80: calc(5 * var(--space-unit)); //80px
     --space-96: calc(6 * var(--space-unit)); //96px
 
@@ -83,4 +86,166 @@ VARIABLES
     // --border-radius-sm: 2px;
     // --border-radius-lg: 4px;
     // --border-radius-full: 9999px;
+}
+
+.search-filter-post-styling {
+    .grid(1);
+    gap: 40px;
+
+    @media @min768 {
+        .grid(2);
+    }
+
+    @media @min1024 {
+        .grid(3);
+        column-gap: var(--space-24);
+    }
+
+    .news-result-div {
+        background-color: var(--pri-100);
+        overflow: hidden;
+        .b-20();
+        padding-block: var(--space-40);
+
+        @media @min992 {
+            padding-block: var(--space-lg);
+        }
+
+        h2 {
+            .h5();
+            color: var(--white);
+
+            @media @max768 {
+                .center();
+            }
+        }
+
+        .content {
+            color: var(--white);
+        }
+
+        h2,
+        .content,
+        .btn {
+            padding-inline: var(--space-24);
+        }
+
+        .btn {
+            padding-top: var(--space-md);
+            .center();
+        }
+
+        .image-section {
+            img {
+                .img-responsive();
+                overflow: hidden;
+                height: 200px;
+                object-fit: cover;
+                object-position: center;
+
+                @media @min768 {
+                    border-radius: 15px;
+                }
+            }
+
+            padding-block: var(--space-24) var(--space-sm);
+
+            @media @min768 {
+                padding-inline: var(--space-24);
+            }
+        }
+    }
+}
+
+.booking-section {
+    .container {
+        background-image: url("@{images}/patients/patients-bg.jpg");
+        background-size: cover;
+        background-position: center;
+
+        .booking-details {
+            .display-flex(flex, var(--space-40), column, center);
+
+            .content {
+                .h4();
+            }
+
+            .btns {
+                .display-flex(flex, var(--space-24), row, center);
+                flex-wrap: wrap;
+                justify-content: center;
+            }
+        }
+    }
+}
+
+.faq-section {
+    .container {
+        max-width: 1364px;
+        .padding-lr();
+        //faq-list
+        .faq-list {
+            margin-top: var(--space-lg);
+
+            .faq-button {
+                text-align: left;
+                width: 100%;
+                margin-bottom: var(--space-40);
+                border-bottom: 2px solid #B0b0b0;
+                padding-bottom: 54px;
+                @media @min1024 {
+                    margin-bottom: var(--space-lg);
+                }
+
+                .faq-answer {
+                    margin-top: var(--space-24);
+
+                    ul {
+                        list-style-position: inside;
+                        margin-left: var(--space-xs);
+                    }
+                }
+
+                h3 {
+                    span {
+                        .h5();
+                        flex: 1;
+
+                        &.more,
+                        &.less {
+                            text-align: end;
+                        }
+                    }
+
+                    .display-flex(flex, var(--space-xs), row, center);
+                    justify-content: space-between;
+
+                    svg {
+                        height: 40px;
+                        width: 40px;
+                        cursor: pointer;
+                        transition: all .35s ease-in-out;
+
+                    }
+
+                    .less {
+                        display: none;
+                    }
+                }
+
+                &.is-active {
+                    h3 {
+                        .less {
+                            display: block;
+                        }
+
+                        .more {
+                            display: none;
+                        }
+                    }
+                }
+            }
+
+        }
+    }
 }
