--- a/wp-content/themes/henderson/views/menu.twig
+++ b/wp-content/themes/henderson/views/menu.twig
@@ -3,7 +3,7 @@
 		{% for item in items %}
 			<li class="{{ item.classes | join(' ')}}">
 				{# <a target="{{ item.target}}" href="{{ item.link}}">{{ item.title}}</a> #}
-				<a target="_self" href="{{ item.link}}"  aria-label="link to {{item.title}}">{{ item.title}}</a>
+				<a target="_self" href="{{ item.link}}"  aria-label="link to menu">{{ item.title}}</a>
 				{% include "menu.twig" with{'items':item.children} %}
 			</li>
 		{% endfor %}
