--- a/wp-content/themes/henderson/views/single-news.twig
+++ b/wp-content/themes/henderson/views/single-news.twig
@@ -4,7 +4,7 @@
 		<article class="post-type-{{post.post_type}} padding" id="post-{{ post.ID}}">
 			<section class="article-content container">
 				<div class="article-details" data-aos="fade-in">
-					<h2>{{post.title}}...{{post.meta('news_type')}}</h2>
+					<h2>{{post.title}}</h2>
 					<div class="time-read">
 						<p class="date">{{ post.date|date('F j, Y')}}</p>
 						{% set wordCount = post.meta('news_content')|split(' ')|length %}
@@ -19,7 +19,11 @@
 					</div>
 				</div>
 				<div class="article-body" data-aos="fade-in">
-					<img src="{{ post.thumbnail.src}}" alt="feature-image"/>
+					{% if post.thumbnail.src is not empty %}
+						<img src="{{ post.thumbnail.src}}" alt="feature-image"/>
+					{% else %}
+						<img src="{{ site.theme.link}}/static/images/placeholder.jpg" alt="placeholder-image"/>
+					{% endif %}
 					{{post.meta('news_content')}}
 				</div>
 			</section>
@@ -28,22 +32,31 @@
 				<div class="container">
 					<h2>Similar News & Insights</h2>
 					<div class="similar-news-list">
-						{% for news in news %}
-							<div class="news-result-div">
-								<h2>{{news.title}}</h2>
-								<div class="image-section">
-									<img src="{{Image(news.thumbnail).src}}" alt="" />
-								</div>
-								<div class="content">
-									{{news.meta('news_content')|excerpt}}
-								</div>
-								<div class="btn">
-									<a href="{{news.link}}" class="reverse-btn" aria-label="{{news.title}}">Learn More</a>
-								</div>
-							</div>
+						{% for type1 in post.news_type %}
+							{% for news in news %}
+								{% for type2 in news.news_type %}
+									{% if type1 == type2 %}
+										<div class="news-result-div">
+											<h2>{{news.title}}</h2>
+											<div class="image-section">												
+												{% if news.thumbnail.src is not empty %}
+													<img src="{{Image(news.thumbnail).src}}" alt=""/>
+												{% else %}
+													<img src="{{ site.theme.link}}/static/images/placeholder.jpg" alt="placeholder-image"/>
+												{% endif %}
+											</div>
+											<div class="content">
+												{{news.meta('news_content')|excerpt}}
+											</div>
+											<div class="btn">
+												<a href="{{news.link}}" class="reverse-btn" aria-label="{{news.title}}">Learn More</a>
+											</div>
+										</div>
+									{% endif %}
+								{% endfor %}
+							{% endfor %}
 						{% endfor %}
 					</div>
-
 				</div>
 			</section>
 
