--- a/wp-content/themes/henderson/views/page-patients.twig
+++ b/wp-content/themes/henderson/views/page-patients.twig
@@ -63,9 +63,9 @@
 				<div class="wrapper padding">
 					<div class="section-details">
 						<h2 class="center">{{form.title}}</h2>
-						<div class="content center">
+						{# <div class="content center">
 							{{form.description}}
-						</div>
+						</div> #}
 					</div>
 				</div>
 			</div>
