--- a/wp-content/themes/henderson/views/page-who-we-are.twig
+++ b/wp-content/themes/henderson/views/page-who-we-are.twig
@@ -54,7 +54,7 @@
 					<div class="content-section">
 						<div class="content-details">
 							<div class="logo">{{ function('file_get_contents', Image(mission.logo).src) }}</div>
-							<h3 class="h5">{{mission.title}}</h3>
+							<h3 class="">{{mission.title}}</h3>
 							<div class="content">{{mission.description}}</div>
 						</div>
 					</div>
@@ -70,7 +70,7 @@
 					<div class="content-section">
 						<div class="content-details">
 							<div class="logo">{{ function('file_get_contents', Image(vision.logo).src) }}</div>
-							<h3 class="h5">{{vision.title}}</h3>
+							<h3 class="">{{vision.title}}</h3>
 							<div class="content">{{vision.description}}</div>
 						</div>
 					</div>
@@ -107,7 +107,7 @@
 							{% endfor %}
 						</div>
 						<div class="btns">
-							<a href="{{page.button.link}}" class="reverse-btn" aria-label="{{page.button.name}} Service">{{page.button.name}}</a>
+							<a href="{{page.button.link}}" target="_blank" rel="noopener noreferrer" class="reverse-btn" aria-label="{{page.button.name}} Service">{{page.button.name}}</a>
 						</div>
 					</div>
 				</div>
