--- a/wp-content/themes/henderson/views/page-what-we-do.twig
+++ b/wp-content/themes/henderson/views/page-what-we-do.twig
@@ -27,7 +27,7 @@
                                 <div class="content">{{list.desc}}</div>
                                 <div class="btns">
                                     <a href="{{list.button_1.link}}" class="reverse-btn" aria-label="{{list.title}} Service">{{list.button_1.name}}</a>
-                                    <a href="{{list.button_2.link}}" class="reverse-btn" aria-label="{{list.title}} Service">{{list.button_2.name}}</a>
+                                    <a href="{{list.button_2.link}}" target="_blank" rel="noopener noreferrer" class="reverse-btn" aria-label="{{list.title}} Service">{{list.button_2.name}}</a>
                                 </div>
                             </div>
                         {% endfor %}
