--- a/wp-content/themes/henderson/views/partials/hero.twig
+++ b/wp-content/themes/henderson/views/partials/hero.twig
@@ -38,8 +38,8 @@
 					{% endfor %}
 				</div>
 				<div class="btns">
-					<a href="{{field.meta('button_1').link}}" aria-label="{{field.meta('button_1').name}}" target="_blank" rel="noopener noreferrer" class="reverse-btn">{{field.meta('button_1').name}}</a>
-					<a href="{{field.meta('button_2').link}}" aria-label="{{field.meta('button_2').name}}" target="_blank" rel="noopener noreferrer" class="reverse-btn">{{field.meta('button_2').name}}</a>
+					<a href="{{field.meta('button_1').link}}" aria-label="{{field.meta('button_1').name}}" class="reverse-btn">{{field.meta('button_1').name}}</a>
+					<a href="tel:{{field.meta('button_2').link}}" aria-label="{{field.meta('button_2').name}}" class="reverse-btn">{{field.meta('button_2').name}}</a>
 				</div>
 			</div>
 
@@ -60,8 +60,8 @@
 					{% endfor %}
 				</div>
 				<div class="btns">
-					<a href="{{field.meta('button_1').link}}" aria-label="{{field.meta('button_1').name}}" target="_blank" rel="noopener noreferrer" class="reverse-btn">{{field.meta('button_1').name}}</a>
-					<a href="{{field.meta('button_2').link}}" aria-label="{{field.meta('button_2').name}}" target="_blank" rel="noopener noreferrer" class="reverse-btn">{{field.meta('button_2').name}}</a>
+					<a href="{{field.meta('button_1').link}}" aria-label="{{field.meta('button_1').name}}" class="reverse-btn">{{field.meta('button_1').name}}</a>
+					<a href="tel:{{field.meta('button_2').link}}" aria-label="{{field.meta('button_2').name}}" class="reverse-btn">{{field.meta('button_2').name}}</a>
 				</div>
 			</div>
 
